--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="middle-container">
       <div class="profile">
-        <img src="F:\elearning\Web Development_by saif\HTML-Personal Sites\circle-cropped.png" alt="">
+        <img src="circle-cropped.png" alt="">
         <h2><b>Hello.</b></h2>
         <p class="intro">I am an iOS and Web Developer. I'm the Developer of This Website. I ❤️ Gaming and learning Ethical Hacking.</p>
       </div>
