--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Saifullah Khan</title>
     <link rel="stylesheet" href="css\styles.css">
-    <link rel="icon" href="favcoinn.ico">
+    <link rel="icon" href="\favcoin\favcoinn.ico">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:ital,wght@1,100&family=Sacramento&display=swap" rel="stylesheet">
   </head>
 
