--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Saifullah Khan</title>
     <link rel="stylesheet" href="css\styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:ital,wght@1,100&family=Sacramento&display=swap" rel="stylesheet">
-    <link rel="icon" href="/favcoin/favcoinn.ico">
+    <link rel="icon" href="favcoinn.ico">
   </head>
 
 
