--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.instagram.com/_saif.khan1717/">Instagram</a>
+    <a class="footer-link" href="https://www.instagram.com/_sxxf.khxn_/">Instagram</a>
     <a class="footer-link" href="https://twitter.com/home">Twitter</a>
     <p class="copyright">© 2022 Saifullah Khan.</p>
     </div>
